--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,11 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+
+# Mac
+.DS_Store
+
+# Vim
+.*swp
+.*.un~
+
