ライブラリを解析対象外にする

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -7,3 +7,5 @@ disabled_rules: # rule identifiers to exclude from running
     - vertical_whitespace
 opt_in_rules:
     - empty_count
+excluded:
+    - Carthage
